cloud/k3s/backend/standard/tetris/components.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tetris
  labels:
    app: tetris
    component: deployment
spec:
  selector:
    matchLabels:
      app: tetris
  template:
    metadata:
      labels:
        app: tetris
        component: workload
    spec:
      containers:
      - image: ghcr.io/jobscale/tetris
        name: tetris
        volumeMounts:
        - name: shared-log
          mountPath: /var/log/nginx
      - image: ghcr.io/jobscale/log-upload
        name: log-upload
        volumeMounts:
        - name: shared-log
          mountPath: /var/log/sidecar
      volumes:
      - name: shared-log
        emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: tetris
  labels:
    app: tetris
    component: service
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: tetris
  type: LoadBalancer
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tetris
  labels:
    name: tetris
    component: ingress
spec:
  ingressClassName: nginx
  tls:
  - secretName: jsxjp-tls
    hosts: [ "tetris.jsx.jp" ]
  rules:
  - host: tetris.jsx.jp
    http:
      paths:
      - pathType: Prefix
        path: /
        backend:
          service:
            name: tetris
            port:
              number: 80
